feat(metrics): log `DisconnectTracker` metrics when a websocket session is closed.